src/App.css
/* root */

:root {
  --color-main: #07111D;
  --color-secondary: #ec9c5d;
  --color-accent: #f9d091;
  --color-console-text: #eee;
  --color-console-background: #07111D;
  --overflow: visible;
  --font-main: 'player-start-2p'
}

html {
  background-color: var(--color-console-background);
  font-family: 'player-start-2p';
}

.App {
  background-color: var(--color-console-background);
  color: #eee;
  
  /* ensuring game is alway centered on screen */
  align-content: center;
  height: 100vh;
  text-align: center;
  
  outline: none;
}

.Nystrum {
  background-color: var(--color-main);
  /*
    setting a common resolution for now.
    once we establish a good design at one resolution we can make this variable.
    But it's difficult to come up with good UI when it's response from the start.
  */
  width: 1280px;
  height: 720px;
  
  /* ensuring game is alway centered on screen */
  margin: auto;

  /* may need to toggle on/off durring development */
  overflow: var(--overflow);
}

.App-logo {
  animation: App-logo-spin infinite 20s linear;
  height: 40vmin;
  pointer-events: none;
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

#display {
  /* overflow: scroll; */
  /* height: 100vh; */
  height: 100%;
  /* min-height: 300px; */
}

#display:focus {
  outline: none;
}

.game_display_container {
  /* overflow-x: scroll; */
  /* border: solid 4px #eee; */
  /* height: 100%; */
  /* height: calc(100vh - 200px); */
  margin: 10px;
  position: relative;
}

.btn {
  font-family: 'player-start-2p';
}

.Instructions {
  height: 200px;
}

.Level {
  /* height: 100vh; */
  /* max-height: 100vh; */
}

.Level > .row {
  margin: 0;
}

.CharacterSelect {
  /* margin: auto; */
  width: 300px;
}

.CharacterSelect__button {
  display: block;
  margin: 20px 0;
  width: 350px;
}

.UI {
  text-align: left;
}

.UI button {
  display: block;
}

.Tooltip {
    display:inline-block;
    position:relative;
    text-align:left;
}

.Tooltip .top {
    min-width:200px; 
    top:-20px;
    left:50%;
    transform:translate(0%, -100%);
    padding:10px 20px;
    color:#444444;
    background-color:#EEEEEE;
    font-weight:normal;
    font-size:13px;
    border-radius:8px;
    position:absolute;
    z-index:99999999;
    box-sizing:border-box;
    box-shadow:0 1px 8px rgba(0,0,0,0.5);
    display:none;
}

.Tooltip:hover .top {
    display:block;
}

.Tooltip .top i {
    position:absolute;
    top:100%;
    left:50%;
    margin-left:-12px;
    width:24px;
    height:12px;
    overflow:hidden;
}

.Tooltip .top i::after {
    content:'';
    position:absolute;
    width:12px;
    height:12px;
    left:50%;
    transform:translate(-50%,-50%) rotate(45deg);
    background-color:#EEEEEE;
    box-shadow:0 1px 8px rgba(0,0,0,0.5);
}

.CharacterCard_Container {
  display: flex;
  justify-content: flex-start;
}

.CharacterCard {
  /* border: 2px solid #222;
  box-shadow: 6px 6px 6px #222; */
  border-radius: 6px;
  display: flex;
  justify-content: space-around;
  /* margin-right: 20px; */
  margin-bottom: 20px;
  border-collapse: collapse;
  flex-direction: column;
}

.CharacterCard .Portrait {
  border: 3px solid;
  border-radius: 6px;
  display: flex;
  font-size: 26px;
  justify-content: center;
  align-items: center;
  margin-right: 10px;
  margin-bottom: 16px;
  /* min-width: 100px;
  min-height: 100px; */
  /* padding: 10px; */
}

.CharacterCard .StatusEffects {
  /* background-color: #666; */
  display: flex;
  justify-content: flex-start;
  border-radius: 6px;
  padding: 8px;
  margin: 0 12px 0 0;
  text-align: center;
}

.ResourceBlock {
  border: 3px solid;
  border-radius: 6px;
  box-shadow: 3px 3px #424242;
  display: flex;
  font-size: 16;
  justify-content: center;
  align-items: center;
  width: 20px;
  height: 20px;
  padding: 10px;
}

.StatusEffects__effect {
  border: 3px solid;
  border-radius: 6px;
  box-shadow: 3px 3px #424242;
  display: flex;
  font-size: 16;
  justify-content: center;
  align-items: center;
  margin-right: 10px;
  width: 20px;
  height: 20px;
  padding: 10px;
  cursor: pointer;
}

.ItemPortrait {
  border: 3px solid;
  border-radius: 6px;
  box-shadow: 3px 3px #424242;
  display: flex;
  font-size: 16;
  justify-content: center;
  align-items: center;
  margin-right: 10px;
  width: 80px;
  height: 80px;
  padding: 10px;
}

.CharacterCard .NamePlate {
  font-size: 26px;
}

.ProgressBar {
  margin-bottom: 16px;
}

.ProgressBar__blips {
  background-color: #666;
  display: flex;
  justify-content: flex-start;
  flex-wrap: wrap;
  border-radius: 6px;
  padding: 8px;
  margin: 0 12px 0 0;
  text-align: center;
}
.ProgressBar__blips__blip {
  display: inline-block;
  min-height: 20px;
  min-width: 20px;
  border: 2px solid #424242;
  box-shadow: 3px 3px #424242;
  border-radius: 5px;
}


.Jacinto_Help {
  width: 50%;
}

.modal > .Jacinto_Help {
  width: auto;
}

.modal-content, 
.modal-footer {
  background-color: var(--color-main) !important;
  /* background-color: #16161d !important; */
  color: var(--color-secondary);
}

/* 16161d
f9d091var(--color-secondary) */

.modal-footer .modal-close {
  color: var(--color-secondary);
}

.Jacinto_Help .Jacinto_Help__section_header {
  border: var(--color-secondary) 1px solid;
  border-radius: 5px;
  font-size: 20px;
}

.Jacinto_Help .Jacinto_Help__section_body {
  text-align: left;
  margin: 15px 0;
}

.Keymap {
  /* left: 0px; */
  height: 50vh;
}

.Keymap .Button {
  width: 100%;
}

.CharacterActions {
  cursor: pointer;
  display: flex;
  flex-wrap: wrap;
}

.CharacterActions__item {
}

.CharacterActions__item__label {
  background-color: #222;
  border: #222 1px solid;
  border-radius: 6px;
  margin: auto;
  text-align: center;
  position: relative;
  width: 90px;
  top: 10px;
}
/* ... */

